Maybe fixed crystallized amber crash